# KNearestNeighbors

./: .dockerignore  .gitignore  CMakeLists.txt  CSVReader.cpp  CSVReader.h  CommandLineArguments.cpp  CommandLineArguments.h  Dockerfile  KNearestNeighbors.cpp  KNearestNeighbors.h  Makefile  Program.cpp  README.md  StringValidator.cpp  Vector.cpp  Vector.h  VectorDataSet.cpp  VectorDataSet.h  VectorDistance.cpp  VectorDistance.h  VectorDistanceCalculator.cpp  VectorDistanceCalculator.h  docker-compose.yml  first-part-two.txt  outpt.txt  q
src/: ClientProgram.cpp  Program.cpp  ServerProgram.cpp
src/calculations/: KNearestNeighbors.cpp  KNearestNeighbors.h  VectorDistance.cpp  VectorDistance.h
src/commands/: AlgorithmSettingsCommand.cpp  AlgorithmSettingsCommand.h  ClassifyDataCommand.cpp  ClassifyDataCommand.h  Command.cpp  Command.h  CommandClasses.h  CommandLineInterface.cpp  CommandLineInterface.h  DisplayResultCommand.cpp  DisplayResultCommand.h  DisplayResultsCommand.cpp  DisplayResultsCommand.h  DownloadResultsCommand.cpp  DownloadResultsCommand.h  UploadFileCommand.cpp  UploadFileCommand.h
src/containers/: VectorDataSet.cpp  VectorDataSet.h
src/io/: CSVReader.cpp  CommandLineArguments.cpp  DefaultIO.h  SocketIO.cpp  SocketIO.h  StandardIO.cpp  StandardIO.h
src/networking/: Packet.cpp  Packet.h  Socket.h  SocketConversion.cpp  SocketConversion.h  TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h  TCPSocket.cpp  TCPSocket.h
src/threading/: ExecutionStoppedException.cpp  ExecutionStoppedException.h  ThreadPool.cpp  ThreadPool.h
src/utils/: CSVReader.cpp  CSVReader.h  StringUtils.cpp  StringUtils.h  StringValidator.cpp  StringValidator.h  Types.h
